User DB Model and API Model are segregated to avoid dependency issues
