# docs/swagger.yaml
@@ -6,17 +6,39 @@ definitions:
       message:
         type: string
     type: object
-  model.User:
+  model.UserCreateRequest:
     properties:
       email:
         type: string
-      id:
-        type: integer
       name:
         type: string
-      passwordHash:
+      password:
         type: string
-      username:
+      user_name:
+        type: string
+    type: object
+  model.UserResponse:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      user_id:
+        type: integer
+      user_name:
+        type: string
+    type: object
+  model.UserUpdateRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      user_id:
+        type: integer
+      user_name:
         type: string
     type: object
 info:
@@ -50,7 +72,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.User'
+              $ref: '#/definitions/model.UserResponse'
             type: array
         "500":
           description: Internal Server Error
@@ -69,14 +91,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/model.UserCreateRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/model.User'
+            $ref: '#/definitions/model.UserResponse'
         "400":
           description: Bad Request
           schema:
@@ -127,7 +149,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.User'
+            $ref: '#/definitions/model.UserResponse'
         "404":
           description: Not Found
           schema:
@@ -154,14 +176,14 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/model.UserUpdateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.User'
+            $ref: '#/definitions/model.UserResponse'
         "400":
           description: Bad Request
           schema:
