# users/model/usermodel.go
@@ -7,3 +7,7 @@ type User struct {
 	Username     string `gorm:"size:100;unique;not null"`
 	PasswordHash string `gorm:"size:512;unique;not null"`
 }
+
+func (user *User) GetAPIResponseObject() *UserResponse {
+	return &UserResponse{ID: user.ID, Name: user.Name, Email: user.Email, Username: user.Username}
+}
